--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server:
+  port: 0
 
+spring:
+  application:
+    name: microservice-credit
+
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://user:password@peer1:8761/eureka/, http://user:password@peer2:8761/eureka/
