--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,33 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+		  <dependency>
+           <groupId>io.reactivex</groupId>
+    	   <artifactId>rxjava</artifactId>
+    	   <version>1.3.8</version>
+        </dependency>
+        
+        <dependency>
+        <groupId>io.micronaut.spring</groupId>
+    	<artifactId>micronaut-spring-boot</artifactId>
+   		 <version>2.1.0</version>
+</dependency>
+        
+        
+        
+          <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.199</version>
+        </dependency>
+        
+          <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.25.0</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
